--- a/index.html
+++ b/index.html
@@ -118,8 +118,9 @@
                     <Partials.Header text="Aplikasi Pintar Pemilihan Sekolah Kedinasan" />
                     <p>Tentukan Sekolah Kedinasan mu secara tepat dengan software rekomendasi ini !!!</p>
 
-                    <div className="container">
+                    <div className="container card">
                         <h6>Untuk Tahap Pengembangan</h6>
+                        <p>Bagian ini akan saya hilangkan waktu production</p>
                         <button onClick={() => props.showPage("ipdn")}>IPDN</button>
                         <button onClick={() => props.showPage("stan")}>STAN</button>
                     </div>
