--- a/index.html
+++ b/index.html
@@ -607,17 +607,17 @@
                     const persainganMasuk = props.persainganMasuk;
                     return (
                         <React.Fragment>
-                            <div className="container card p-2 mb-3">
+                            <div className="container card p-2 mb-3 text-center">
                                 <div className="row">
-                                    <div className="col-4">
+                                    <div className="col-sm-4">
                                         <button type="button" className="btn btn-danger" disabled>Alert!!!</button>
                                     </div>
 
-                                    <div className="col-4">
+                                    <div className="col-sm-4">
                                         <b><u>Tingkat persaingan 1:57</u></b>
                                     </div>
 
-                                    <div className="col-4">
+                                    <div className="col-sm-4">
                                         <b>Cek perbandingan tingkat persaingan masuk Sekolah Kedinasan <button onClick={() => props.showPage("cek-kedinasan-sekolah")} className="btn btn-primary">Disini</button></b>
                                     </div>
                                 </div>
