--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
                         <Pages.Informasi.Partials.Header title="Berdasarkan hasil yang Anda pilih, maka IPDN adalah salah satu yang tepat untuk Anda" />
                         <p>IPDN ini merupakan salah satu Sekolah Kedinasan dengan tingkat persaingan tertinggi No 3 dari yang lainnya.</p>
                         <p>Tingkat persentase kelolosan pada seleksi 2023 yaitu sebesar 1.63% dan jumlah yang daftar adalah 32.810</p>
-                        <Pages.Informasi.Partials.Footer showPage={props.showPage} tingkatPersaingan="1.61" persainganMasuk="IPDN" />
+                        <Pages.Informasi.Partials.Footer showPage={props.showPage} tingkatPersaingan="1:61" persainganMasuk="IPDN" />
                         <Partials.ButtonGroup Button1={() => <Pages.Informasi.Partials.TombolKembali page={"cek-ipdn"} showPage={props.showPage} />} />
                     </React.Fragment>
                 )
@@ -674,7 +674,7 @@
                         <p>STAN ini merupakan salah satu Sekolah Kedinasan dengan tingkat persaingan tertinggi No 7 dari yang lainnya. </p>
                         <p>Tingkat persentase kelolosan pada seleksi 2023 yaitu sebesar 2.15 % dan jumlah yang daftar adalah 51.136</p>
 
-                        <Pages.Informasi.Partials.Footer showPage={props.showPage} persainganMasuk="STAN" />
+                        <Pages.Informasi.Partials.Footer showPage={props.showPage} tingkatPersaingan="1:46" persainganMasuk="STAN" />
                         <Partials.ButtonGroup Button1={() => <Pages.Informasi.Partials.TombolKembali page={"cek-stan"} showPage={props.showPage} />} />
                     </React.Fragment>
                 )
