perbaiki bug pada tombol kembali

--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
             }
 
             function Button1() {
-                return <button onClick={() => props.showPage("cek-kedinasan-sekolah")} className="btn btn-primary">Kembali</button>
+                return <button onClick={() => props.showPage("apakah-kamu-buta-warna")} className="btn btn-primary">Kembali</button>
             }
 
             function Button2() {
