--- a/index.html
+++ b/index.html
@@ -469,6 +469,20 @@
 
 
         Pages.Cek = {
+            informasiGigi: [
+                    "Prothesa gigi depan (gigi seri atau gigi taring max 1 buah).",
+                    "Gigi geraham yang hilang max 4 buah dan tidak hilang berurutan.",
+                    "Tidak boleh memakai fixed orthodonti pada saat pemeriksaan kesehatan.",
+                    "Tidak boleh adanya pewarnaan gigi yang berat.",
+                    "Tidak boleh adanya hiperplasia dan hipoplasia gigi yang berat.",
+                    "Tidak boleh gigi crowding berat.",
+                    "Diastema max 3mm.",
+                    "Openbite vertikal max 2mm. Overbite max 4mm.",
+                    "Tidak dibolehkan gigi maloklusi (crossbite max 2 gigi, protrusif max 6mm dan progeni).",
+                    "Tidak boleh ada gangren pulpa maupun caries profunda.",
+                    "Gangren radix ditoleransi hanya 1 gigi dan harus segera diekstraksi.",
+                    "Tidak boleh ada tumor di rongga mulut.",
+                ],
             Partials: {
                 TombolKembali: function (props) {
                     return <button onClick={() => props.showPage("hasil")} className="btn btn-primary">Kembali</button>
@@ -520,21 +534,6 @@
             },
 
             IPDN: props => {
-                const informasiGigi = [
-                    "Prothesa gigi depan (gigi seri atau gigi taring max 1 buah).",
-                    "Gigi geraham yang hilang max 4 buah dan tidak hilang berurutan.",
-                    "Tidak boleh memakai fixed orthodonti pada saat pemeriksaan kesehatan.",
-                    "Tidak boleh adanya pewarnaan gigi yang berat.",
-                    "Tidak boleh adanya hiperplasia dan hipoplasia gigi yang berat.",
-                    "Tidak boleh gigi crowding berat.",
-                    "Diastema max 3mm.",
-                    "Openbite vertikal max 2mm. Overbite max 4mm.",
-                    "Tidak dibolehkan gigi maloklusi (crossbite max 2 gigi, protrusif max 6mm dan progeni).",
-                    "Tidak boleh ada gangren pulpa maupun caries profunda.",
-                    "Gangren radix ditoleransi hanya 1 gigi dan harus segera diekstraksi.",
-                    "Tidak boleh ada tumor di rongga mulut.",
-                ]
-
                 function Amnesia() {
                     return (
                         <React.Fragment>
@@ -548,7 +547,7 @@
                     ["Jurusan", "Semua Jurusan (asalkan berijazah SMA dan MA)"],
                     ["Usia Saat Pembukaan", "Min 16 Max 21 (per Januari)"],
                     ["Tinggi Badan", "pria 160 cm dan wanita 155 cm"],
-                    ["Gigi", <Pages.Cek.Partials.ListInformasi data={informasiGigi} numbered={true} />],
+                    ["Gigi", <Pages.Cek.Partials.ListInformasi data={Pages.Cek.informasiGigi} numbered={true} />],
                     ["Bekas Luka", "Asalkan tidak memengaruhi kesehatan secara signifikan atau ada komplikasi yang berkelanjutan"],
                     ["Amnesia", <Amnesia />],
                     ["Ketentuan tambahan", ""]
@@ -594,30 +593,32 @@
 
             PoltekipPoltekim: props => {
                 const data1 = [
-                    ["Sekdin", "Semua Jurusan (asalkan berijazah SMA dan MA)"],
-                    ["Usia Saat Pembukaan", "Min 14 max 21 tahun"],
-                    ["Buta Warna", "Parsial"],
-                    ["Minus", "Tidak ada"],
-                    ["Silinder", "Tidak ada"],
+                    ["Sekdin", "POLTEKIP"],
+                    ["Usia Saat Pembukaan", "Min 17 Max 23"],
+                    ["Buta Warna", "Tidak boleh"],
+                    ["Minus", "0"],
+                    ["Silinder", "0"],
                     ["SLTA", "SLTA/MA/SMK-sederajat"],
                     ["Jurusan", "Semua Jurusan"],
-                    ["Gigi", "Tidak berlubang, kerapihan point plus tidak menggugurkan (tidak ada persyaratan tertulis terkait gigi)"],
-                    ["Bekas Luka", "Asalkan tidak memengaruhi kesehatan secara signifikan atau ada komplikasi yang berkelanjutan"],
-                    ["Amnesia", "Tidak ada penyakit bawaan"],
+                    ["Tinggi Badan", "Pria 170 cm, perempuan 160 cm. BB Seimbang"],
+                    ["Gigi", <Pages.Cek.Partials.ListInformasi data={Pages.Cek.informasiGigi} numbered={true} />],
+                    ["Bekas Luka", "Asalkan tidak memengaruhi kesehatan secara signifikan atau ada komplikasi yang berkelanjutan, tidak pernah mengalami patah tulang"],
+                    ["Amnesia", "Tidak ada penyakit bawaan dan tidak dissabilitas"],
                     ["Ketentuan tambahan", ""]
                 ]
 
                 const data2 = [
-                    ["Sekdin", "Semua Jurusan (asalkan berijazah SMA dan MA)"],
-                    ["Usia Saat Pembukaan", "Min 14 max 21 tahun"],
-                    ["Buta Warna", "Parsial"],
-                    ["Minus", "Tidak ada"],
-                    ["Silinder", "Tidak ada"],
+                    ["Sekdin", "POLTEKIM"],
+                    ["Usia Saat Pembukaan", "Min 17 Max 23"],
+                    ["Buta Warna", "Tidak boleh"],
+                    ["Minus", "0"],
+                    ["Silinder", "0"],
                     ["SLTA", "SLTA/MA/SMK-sederajat"],
                     ["Jurusan", "Semua Jurusan"],
-                    ["Gigi", "Tidak berlubang, kerapihan point plus tidak menggugurkan (tidak ada persyaratan tertulis terkait gigi)"],
-                    ["Bekas Luka", "Asalkan tidak memengaruhi kesehatan secara signifikan atau ada komplikasi yang berkelanjutan"],
-                    ["Amnesia", "Tidak ada penyakit bawaan"],
+                    ["Tinggi Badan", "Pria 170 cm, perempuan 160 cm. BB Seimbang"],
+                    ["Gigi", <Pages.Cek.Partials.ListInformasi data={Pages.Cek.informasiGigi} numbered={true} />],
+                    ["Bekas Luka", "Asalkan tidak memengaruhi kesehatan secara signifikan atau ada komplikasi yang berkelanjutan, tidak pernah mengalami patah tulang"],
+                    ["Amnesia", "Tidak ada penyakit bawaan dan tidak dissabilitas"],
                     ["Ketentuan tambahan", ""]
                 ]
 
