--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
                         <button onClick={() => props.showPage("ipdn")}>IPDN</button>
                         <button onClick={() => props.showPage("stan")}>STAN</button>
                         <button onClick={() => props.showPage("poltekip-poltekim")}>PoltekipPoltekim</button>
+                        <button onClick={() => props.showPage("cek-poltek-ssn")}>Cek Poltek SSN</button>
                     </div>
 
                     <Partials.ButtonGroup Button1={() => <Button1 />} Button2={() => <Button2 />} />
@@ -469,7 +470,8 @@
 
 
         Pages.Cek = {
-            informasiGigi: [
+            FINAL: {
+                informasiGigi: [
                     "Prothesa gigi depan (gigi seri atau gigi taring max 1 buah).",
                     "Gigi geraham yang hilang max 4 buah dan tidak hilang berurutan.",
                     "Tidak boleh memakai fixed orthodonti pada saat pemeriksaan kesehatan.",
@@ -483,6 +485,9 @@
                     "Gangren radix ditoleransi hanya 1 gigi dan harus segera diekstraksi.",
                     "Tidak boleh ada tumor di rongga mulut.",
                 ],
+                informasiBekasLuka: "Asalkan tidak memengaruhi kesehatan secara signifikan atau ada komplikasi yang berkelanjutan",
+            },
+
             Partials: {
                 TombolKembali: function (props) {
                     return <button onClick={() => props.showPage("hasil")} className="btn btn-primary">Kembali</button>
@@ -547,7 +552,7 @@
                     ["Jurusan", "Semua Jurusan (asalkan berijazah SMA dan MA)"],
                     ["Usia Saat Pembukaan", "Min 16 Max 21 (per Januari)"],
                     ["Tinggi Badan", "pria 160 cm dan wanita 155 cm"],
-                    ["Gigi", <Pages.Cek.Partials.ListInformasi data={Pages.Cek.informasiGigi} numbered={true} />],
+                    ["Gigi", <Pages.Cek.Partials.ListInformasi data={Pages.Cek.FINAL.informasiGigi} numbered={true} />],
                     ["Bekas Luka", "Asalkan tidak memengaruhi kesehatan secara signifikan atau ada komplikasi yang berkelanjutan"],
                     ["Amnesia", <Amnesia />],
                     ["Ketentuan tambahan", ""]
@@ -574,7 +579,7 @@
                     ["SLTA", "SLTA/MA/SMK-sederajat"],
                     ["Jurusan", "Semua Jurusan"],
                     ["Gigi", "Tidak berlubang, kerapihan point plus tidak menggugurkan (tidak ada persyaratan tertulis terkait gigi)"],
-                    ["Bekas Luka", "Asalkan tidak memengaruhi kesehatan secara signifikan atau ada komplikasi yang berkelanjutan"],
+                    ["Bekas Luka", Pages.Cek.FINAL.informasiBekasLuka],
                     ["Amnesia", "Tidak ada penyakit bawaan"],
                     ["Ketentuan tambahan", ""]
                 ]
@@ -601,8 +606,8 @@
                     ["SLTA", "SLTA/MA/SMK-sederajat"],
                     ["Jurusan", "Semua Jurusan"],
                     ["Tinggi Badan", "Pria 170 cm, perempuan 160 cm. BB Seimbang"],
-                    ["Gigi", <Pages.Cek.Partials.ListInformasi data={Pages.Cek.informasiGigi} numbered={true} />],
-                    ["Bekas Luka", "Asalkan tidak memengaruhi kesehatan secara signifikan atau ada komplikasi yang berkelanjutan, tidak pernah mengalami patah tulang"],
+                    ["Gigi", <Pages.Cek.Partials.ListInformasi data={Pages.Cek.FINAL.informasiGigi} numbered={true} />],
+                    ["Bekas Luka", Pages.Cek.FINAL.informasiBekasLuka],
                     ["Amnesia", "Tidak ada penyakit bawaan dan tidak dissabilitas"],
                     ["Ketentuan tambahan", ""]
                 ]
@@ -616,8 +621,8 @@
                     ["SLTA", "SLTA/MA/SMK-sederajat"],
                     ["Jurusan", "Semua Jurusan"],
                     ["Tinggi Badan", "Pria 170 cm, perempuan 160 cm. BB Seimbang"],
-                    ["Gigi", <Pages.Cek.Partials.ListInformasi data={Pages.Cek.informasiGigi} numbered={true} />],
-                    ["Bekas Luka", "Asalkan tidak memengaruhi kesehatan secara signifikan atau ada komplikasi yang berkelanjutan, tidak pernah mengalami patah tulang"],
+                    ["Gigi", <Pages.Cek.Partials.ListInformasi data={Pages.Cek.FINAL.informasiGigi} numbered={true} />],
+                    ["Bekas Luka", Pages.Cek.FINAL.informasiBekasLuka],
                     ["Amnesia", "Tidak ada penyakit bawaan dan tidak dissabilitas"],
                     ["Ketentuan tambahan", ""]
                 ]
@@ -631,6 +636,57 @@
                         <Pages.Cek.Partials.Table title="PERSYARATAN POLTEKIP" data={data1} />
                         <Pages.Cek.Partials.Table title="PERSYARATAN POLTEKIM" data={data2} />
                         <Partials.ButtonGroup Button1={() => <Pages.Cek.Partials.TombolKembali showPage={props.showPage} />} Button2={() => <Button2 />} />
+                    </React.Fragment>
+                )
+            },
+
+            PoltekSSN: props => {
+                const informasiJurusan = [
+                    "SMA Jurusan IPA",
+                    "Madrasah Aliyah Jurusan IPA",
+                    (() => (
+                        <React.Fragment>
+                            SMK Teknik Elektronika
+                            <ul>
+                                <li>Teknik Audio Video</li>
+                                <li>Teknik Elektronika Industri</li>
+                                <li>Teknik Mekatronika</li>
+                                <li>Teknik Elektronika Daya dan Komunikasi</li>
+                            </ul>
+                        </React.Fragment>
+                    ))(),
+                    (() => (
+                        <React.Fragment>
+                            SMK TI bidang keahlian Teknologi Informasi dan Komunikasi
+                            <ul>
+                                <li>Rekayasa Perangkat Lunak</li>
+                                <li>Teknik Komputer dan Jaringan </li>
+                                <li>Teknik Mekatronika</li>
+                                <li>Sistem Informatika, Jaringan dan Aplikasi</li>
+                            </ul>
+                        </React.Fragment>
+                    ))()
+                ];
+
+                const data = [
+                    ["Sekdin", "POLTEK SSN"],
+                    ["Usia Saat Pembukaan", "Min 17 Max 21 (per-desember)"],
+                    ["Buta Warna", "Tidak boleh"],
+                    ["Minus", "1 D"],
+                    ["Silinder", "0"],
+                    ["SLTA", "SMA/MA/SMK"],
+                    ["Jurusan", <Pages.Cek.Partials.ListInformasi data={informasiJurusan} numbered={true} />],
+                    ["Tinggi Badan", "Pria : 160 cm, Wanita : 15 cm"],
+                    ["Gigi", <Pages.Cek.Partials.ListInformasi data={Pages.Cek.FINAL.informasiGigi} numbered={true} />],
+                    ["Bekas Luka", Pages.Cek.FINAL.informasiBekasLuka],
+                    ["Amnesia", "Tidak cacat fisik dan mental, serta tidak memiliki penyakit bawaan dan/atau menular yang dapat mengganggu proses belajar"],
+                    ["Ketentuan tambahan", ""]
+                ]
+
+                return (
+                    <React.Fragment>
+                        <Pages.Cek.Partials.Table title="Persyaratan Poltek SSN" data={data} />
+                        <Partials.ButtonGroup Button1={() => <Pages.Cek.Partials.TombolKembali showPage={props.showPage} />} />
                     </React.Fragment>
                 )
             }
@@ -762,6 +818,7 @@
                         {activePage === "cek-ipdn" && <Pages.Cek.IPDN showPage={showPage} />}
                         {activePage === "cek-stan" && <Pages.Cek.STAN showPage={showPage} />}
                         {activePage === "cek-poltekip-poltekim" && <Pages.Cek.PoltekipPoltekim showPage={showPage} />}
+                        {activePage === "cek-poltek-ssn" && <Pages.Cek.PoltekSSN showPage={showPage} />}
 
                         {activePage === "ipdn" && <Pages.Informasi.IPDN showPage={showPage} />}
                         {activePage === "stan" && <Pages.Informasi.STAN showPage={showPage} />}
